added raspberrypi sources

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 sources/esp8266/.pio
 sources/esp8266/.vscode
+
+sources/raspberrypi/.vscode
+sources/raspberrypi/__pycache__
+sources/raspberrypi/*.pyc
